--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Andrew's Big Ride Adventure- $4.50 a pint"
-email: tmbrwlf103@gmail.com
+title: "Z0rd0n's Explorations"
+email: xpl0r.scott@gmail.com
 description: "A gateway into Andrew's destiny"
 baseurl: ""
 url: "http://z0rd0n.github.io"
